[package]
name = "enum_data_proc"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
description="a proc-macro,Add bit operations and arithmetic operations to enum"
repository="https://github.com/aenu/enum_data_proc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
quote="1.0.*"
syn="2.0.*"
